istio/istio_gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: p2x-gateway
  namespace: p2x
spec:
  selector:
    istio: ingressgateway  
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
